# mrs

./: .gitignore  BUILD_CMAKE.md  CMakeLists.txt  CMakePresets.json  DEBUG_ANALYSIS.md  Makefile  Masangsoft.sln  README.md  README_COMPRESSION.md  SOLUCION_SIGNATURE_DEBUG.md  build.sh  compile_debug.bat  compile_debug_advanced.bat  compile_debug_file_read.bat  compile_main_improved.bat  debug_file_read.cpp  debug_signatures.cpp  debug_signatures_advanced.cpp  debug_sizes.cpp  example_usage.bat  main_improved_debug.cpp
Source/FileSystem/: CMakeLists.txt  FileSystem.vcxproj
Source/FileSystem/Include/: FileSystem.h
Source/FileSystem/Source/: FileSystem.cpp
Source/Mrs/: CMakeLists.txt  Mrs.vcxproj
Source/Mrs/Include/: stdafx.h
Source/Mrs/Source/: main.cpp
